localize label nav button post and fix css scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   border-radius: 3px;
 }
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 5px;
 }
 body{
   background: #f2f2f2;
